camo-derive/tests/fail/struct_unnamed_fields.rs
use camo_derive::Camo;

#[derive(Camo)]
struct Foo(i32, i32);

fn main() {}
