camo-derive/tests/fail/struct_unnamed_fields.stderr
error: `camo` does not support multiple unnamed fields in structs
 --> tests/fail/struct_unnamed_fields.rs:4:11
  |
4 | struct Foo(i32, i32);
  |           ^^^^^^^^^^
